@@ -38,7 +38,7 @@ public abstract class Log {
 			try {
 				Class.forName("org.apache.log4j.Logger");
 				Class<?> log4jLogFactoryClass = Class.forName("com.jfinal.log.Log4jLogFactory");
-				defaultLogFactory = (ILogFactory)log4jLogFactoryClass.newInstance();	// return new Log4jLogFactory();
+				defaultLogFactory = (ILogFactory)log4jLogFactoryClass.getDeclaredConstructor().newInstance();	// return new Log4jLogFactory();
 			} catch (Exception e) {
 				defaultLogFactory = new JdkLogFactory();
 			}
